force-app/main/default/objects/BTN_PersonalTarget__c/BTN_PersonalTarget__c.object-meta.xml
<CustomObject>
    <label>Target</label>
    <nameField>
        <displayFormat>PT-{0000000}</displayFormat>
        <label>Target</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>