force-app/main/default/objects/BTN_PersonalTarget__c/fields/Achieved_percent__c.field-meta.xml
<CustomField>
    <fullName>Achieved_percent__c</fullName>
    <label>Achieved %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>