force-app/main/default/objects/BTN_PersonalTarget__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Certificate</label>
    <referenceTo>BTN_Certificate__c</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>