force-app/main/default/objects/BTN_PersonalTarget__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>BTN_Event__c</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>BTN_PersonalTarget</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>